fix(web): admin layout overflow

--- a/apps/web/src/styles/layout.css
+++ b/apps/web/src/styles/layout.css
@@ -14,4 +14,5 @@
     display: grid;
     grid-template-columns: 1fr 4fr;
     height: 100%;
+    overflow: auto;
 }
